# workspace-creator

./: .databricksignore  .gitignore  .mailmap  Databricks Deployer_1.0.0_aarch64.dmg  README.md  TEMPLATE_STRUCTURE_CHANGE.md  app.py  app.yaml  deploy.py  package-lock.json  package.json
desktop-app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/icons/: icon.icns  resize_icon.py
desktop-app/src-tauri/resources/: assistant-knowledge.md
desktop-app/src-tauri/src/: commands.rs  crypto.rs  dependencies.rs  errors.rs  lib.rs  main.rs  proxy.rs  terraform.rs
desktop-app/src-tauri/src/commands/: assistant.rs  aws.rs  azure.rs  databricks.rs  deployment.rs  gcp.rs  github.rs  mod.rs  templates.rs
desktop-app/src-tauri/templates/aws-simple/: README.md  catalog.tf  credential.tf  locals.tf  metastore.tf  network.tf  outputs.tf  providers.tf  root_s3_bucket.tf  security_group.tf  terraform.tfvars.example  variables.tf  workspace.tf
desktop-app/src-tauri/templates/aws-sra/: cmk.tf  credential.tf  main.tf  outputs.tf  privatelink.tf  provider.tf  variables.tf
desktop-app/src-tauri/templates/azure-simple/: .gitignore  README.md  azure.tf  catalog.tf  databricks.tf  network.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
desktop-app/src-tauri/templates/azure-sra/: outputs.tf  providers.tf  spoke.tf  variables.tf  versions.tf
desktop-app/src-tauri/templates/gcp-simple/: .gitignore  README.md  catalog.tf  databricks.tf  network.tf  outputs.tf  (+3 more)
(+189 files in other folders)
